# QtAnnotations

./: .gitignore  CMakeLists.txt
include/: MainWindow.h  OSGWidget.h  ShapeFactory.h
src/: MainWindow.cpp  OSGWidget.cpp  ShapeFactory.cpp  main.cpp
